--- a/forms.html
+++ b/forms.html
@@ -22,7 +22,7 @@
       <div id="myMenu" class="menu">
         <a id="closeButton" href="#" class="close">x</a>
         <ul>
-          <li><a href="./index.html">Acceuil</a></li>
+          <li><a href="./index.html">Accueil</a></li>
           <li><a href="./biography.html">Biographie</a></li>
           <li><a href="./discography.html">Discographie</a></li>
           <li><a href="./forms.html">Newsletter</a></li>
